--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,12 +13,9 @@
     <string name="login_text_suggestion">Already have account?</string>
     <string name="sign_in_text">Sign In</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="upload_from_camera">Camera</string>
+    <string name="upload_from_gallery">Gallery</string>
+    <string name="upload_button">Upload</string>
+    <string name="camera_permission_denied">Camera can\'t be start without permission</string>
 </resources>
