--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,6 @@
 <resources>
     <string name="app_name">StoryApp</string>
     <string name="story_activity_label">Story</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
     <string name="less_than_8_char_password_error">Password must at least 8 characters</string>
     <string name="email_hint">Your email</string>
     <string name="password_hint">Create password</string>
@@ -13,9 +10,18 @@
     <string name="login_text_suggestion">Already have account?</string>
     <string name="sign_in_text">Sign In</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
-
     <string name="upload_from_camera">Camera</string>
     <string name="upload_from_gallery">Gallery</string>
     <string name="upload_button">Upload</string>
-    <string name="camera_permission_denied">Camera can\'t be start without permission</string>
+    <string name="camera_permission_denied">Camera can not be start without permission</string>
+
+    <string name="card_view_avatar_content_description">Frame of user\'s photo</string>
+    <string name="image_avatar_content_description">Picture of user</string>
+    <string name="btn_camera_upload_content_description">Capture a picture</string>
+    <string name="btn_gallery_upload_content_description">Upload picture from gallery</string>
+    <string name="et_description_post_content_description">Post\'s description</string>
+    <string name="btn_upload_content_description">Post story</string>
+    <string name="tv_user_name_detail_story_content_description">User\'s name %s</string>
+    <string name="rv_list_stories_content_description">List of stories</string>
+    <string name="fab_add_post_content_description">Create a story</string>
 </resources>
