--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">StoryApp</string>
-    <string name="story_activity_label">Story</string>
+    <string name="story_activity_label">Histoire</string>
     <string name="less_than_8_char_password_error">Le mot de passe doit comporter au moins 8 caractères</string>
     <string name="email_hint">Votre email</string>
     <string name="password_hint">Créer un mot de passe</string>
@@ -30,4 +30,8 @@
     <string name="language_setting">Langue</string>
     <string name="logout">déconnexion</string>
     <string name="menu_setting">réglage</string>
+
+    <string name="appwidget_text">Exemple</string>
+    <string name="add_widget">Ajouter widget</string>
+    <string name="app_widget_description">Ceci est une description de widget d\'application</string>
 </resources>
