--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -31,7 +31,7 @@
     <string name="language_setting">Bahasa</string>
     <string name="logout">Keluar</string>
     <string name="menu_setting">Pengaturan</string>
-
+    <string name="menu_location">Lokasi</string>
     <string name="appwidget_text">Contoh</string>
     <string name="add_widget">Tambah widget</string>
     <string name="app_widget_description">Ini adalah deskripsi widget app</string>
