--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -35,4 +35,5 @@
     <string name="appwidget_text">Exemple</string>
     <string name="add_widget">Ajouter widget</string>
     <string name="app_widget_description">Ceci est une description de widget d\'application</string>
+    <string name="retry">essayer à nouveau</string>
 </resources>
