--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -35,4 +35,6 @@
     <string name="appwidget_text">Contoh</string>
     <string name="add_widget">Tambah widget</string>
     <string name="app_widget_description">Ini adalah deskripsi widget app</string>
+    <string name="retry">Coba lagi</string>
+
 </resources>
