--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
     <string name="retry">Retry</string>
+    <string name="permission_not_granted">Action cannot be done without permission</string>
+    <string name="location_not_found">Location not found</string>
+    <string name="include_location">Include current location</string>
+    <string name="post_description_or_image_empty">Please fill the description or select an image</string>
 </resources>
